# context-compress

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: compression.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: compression.rs
crates/core/src/: abstractive.rs  cache.rs  config.rs  extractive.rs  hybrid.rs  lib.rs  token_counter.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
tests/: integration_test.rs
