[package]
name = "context-compress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for LLM token compression"

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
context-compress-core = { path = "../core" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
