[package]
name = "context-compress-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core compression logic for ContextCompress"

[dependencies]
# Token counting
tiktoken-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client for cloud APIs
reqwest = { workspace = true }

# Caching
sled = { workspace = true }

# Logging
tracing = { workspace = true }

# Config
dirs = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[[bench]]
name = "compression"
harness = false
