[package]
name = "context-compress-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for ContextCompress"

[lib]
name = "context_compress_mcp"
path = "src/lib.rs"

[dependencies]
context-compress-core = { path = "../core" }
async-mcp = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
